# cpp_numerical_optimizers

./: CMakeLists.txt  LICENSE  LineOptimizationSim.cpp  README.md  conmmond.txt  error_log.txt  error_plot.py
scripts/: error_plot.py
src/: LineOptimizationCeres.cpp  LineOptimizationSim.cpp
